# SmartFRA

./: .gitignore  CodingStandard.md  README.md
Cloud/Layers/SmartFRAData/: index.js  package.json
Cloud/Layers/SmartFRAData/data/: Queries.js
Cloud/Layers/SmartFRAData/models/: HouseModel.js
Cloud/Layers/SmartFRAData/nodejs/: HouseModel.js  Queries.js  ResidentModel.js  main.js  package.json
DataAccess/Cloud/: Info.md
DataAccess/Cloud/Layers/SmartFRAData/: package.json
DataAccess/Cloud/Layers/SmartFRAData/models/: ResidentModel.js
DataAccess/Local/: index.js  package-lock.json  package.json
DataAccess/Local/Access/: DatabaseAdapter.js  Queries.js
DataAccess/Local/Controller/: GeneralServiceAccessController.js  GuestAccessController.js  GuestController.js  HouseController.js  ResidentAccessController.js  ResidentController.js  ResidentEventController.js  ResidentServiceAccessController.js  ServicesController.js
DataAccess/Local/Models/: ResidentModel.js
DataAccess/Local/Repository/: GeneralServiceAcessRepository.js  GuestAccessRepository.js  GuestRepository.js  HouseRepository.js  ResidentAccessRepository.js  ResidentEventRepository.js  ResidentRepository.js  ResidentServiceAccessRepository.js  ServicesRepository.js
Database/: Info.md  smartFRAdummy0.sql
Embedded/: Build.sh  BuildAndExecute.sh  Info.md
Embedded/SmartFRA/: CMakeLists.txt  main.qml
Embedded/SmartFRA/Logs/: logs.txt
Embedded/SmartFRA/Services/Bootstraping/: Bootstraping.base.hpp  SystemInitializer.Base.cpp  SystemInitializer.Base.hpp  SystemInitializer.cpp  SystemInitializer.hpp  main.cpp
Embedded/SmartFRA/Services/Core/: FRACore.Macros.hpp  FRACore.cpp  FRACore.hpp
Embedded/SmartFRA/Services/FaceDetection/: FaceDetection.Base.cpp  FaceDetection.Base.hpp  FaceDetectionManager.cpp  FaceDetectionManager.hpp
Embedded/SmartFRA/Services/Logging/: Logger.cpp  Logger.hpp  Logging.Base.cpp  Logging.Base.hpp
Embedded/SmartFRA/Services/Networking/: HttpRequestManager.cpp  HttpRequestManager.hpp  HttpRequestsManager.cpp  HttpRequestsManager.hpp  Networking.Base.cpp  Networking.Base.hpp
Embedded/SmartFRA/UI/Qml/: ResidentDriverFailurePage.qml  ResidentDriverHomePage.qml  ResidentDriverSuccessfulPage.qml  main.qml  resources.qrc
Python/: ExtractingFaces.py  FaceDecoder.py  extracting_faces.py  f_recognition.py  faceRecognition.py
Web/: Info.md
Web/FaceRecognition/: index.html
Web/SmartFRA/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  server.js  tailwind.config.js
Web/SmartFRA/src/: index.html  styles.scss
Web/SmartFRA/src/app/: app.component.spec.ts  app.component.ts  app.module.ts  app.routing.ts
(+106 files in other folders)
